# lace

./: .editorconfig  .env.example  .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .mcp.json  .npmrc  .prettierignore  .prettierrc  .sonarcloud.properties  .yarnrc.yml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PROVENANCE  README.md  SECURITY.md  TODO.md  babel.config.json  bump-cardano-js-sdk.sh  bundle-webpack.config.js  commitlint.config.js  datadog-metrics-guide.md  debug-datadog-setup.md  debug-metric-sending.sh  declarations.d.ts  disclaimer.txt  eslint.config.mjs  find-datadog-org.sh  find-datadog-site.sh  flake.nix  licences.json  lmp-bundler-webpack.config.js  makefile  merge-manifest-plugin.js  migrations.json  nx.json  package-lock.json  (+17 more)
.cache/: eslintcache
.claude/: .ckignore  .env.example  .gitignore  metadata.json  settings.json  statusline.cjs  statusline.ps1  statusline.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  pull_request_template.md  settings.yml
.husky/: commit-msg  pre-commit
apps/: README.md
docs/: WORKSPACE.md  comprehensive-dashboard-fixed.json  contracts-and-modules.md  datadog-setup.md  e2e-metrics-dashboard.json
engineering-support/: notifications-migration-spec.md  notifications2-reactive-refactor.md  notifications2-simplification-spec.md  notifications2-v2-port-plan.md
eslint-local-rules/: prevent-memoization-of-sensitive-values.js
lmp-bundle/: const.js
lmp-bundler/: popup-bundle.js
nix/blockchain-services/internal/make-windows-installer/: make-windows-installer.cabal
src/: const.js  (+2 more)
(+2780 files in other folders)
