name:                make-windows-installer
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable make-windows-installer
  main-is:             WindowsInstaller.hs
  build-depends:       base
                     , nsis
                     , optparse-applicative
                     , text
                     , universum

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wextra -Werror -Wno-unused-do-bind
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions: NoImplicitPrelude
                      OverloadedStrings
